Prevent long names from blowing out the results layout. Remove the smaller font size added earlier to make more common names fit. Now long names can wrap to an extra line.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1169 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -662,6 +662,7 @@ div.genus.last {
     position: relative;
     float: left;
     margin: 0 15px 0 0;
+    width: 160px; /* prevent long names from blowing out layout; allow wrap */
 }
 .genus .plant.last {
     margin: 0 0 0 0;
@@ -690,7 +691,6 @@ div.genus.last {
     -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
 }
 .plant p.plant-name {
-    font-size: 0.9em; /* JG: make some longer names fit */
     margin: 7px 0 0 0;
 }
 .plant p.plant-name span.latin {
